--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -69,11 +69,8 @@
                 if (this.exifdata) {
                     var exifHtml = '';
                     exifHtml += '<p><strong>拍摄时间:</strong> ' + (this.exifdata.DateTimeOriginal || '未知') + '</p>';
-                    exifHtml += '<p><strong>经度:</strong> ' + (this.exifdata.GPSLatitude || '未知') + '</p>';
-                    exifHtml += '<p><strong>纬度:</strong> ' + (this.exifdata.GPSLongitude || '未知') + '</p>';
-                    exifHtml += '<p><strong>光圈值:</strong> ' + (this.exifdata.FNumber || '未知') + '</p>';
-                    exifHtml += '<p><strong>焦距:</strong> ' + (this.exifdata.FocalLength || '未知') + '</p>';
-                    exifHtml += '<p><strong>镜头型号:</strong> ' + (this.exifdata.LensModel || '未知') + '</p>';
+                    exifHtml += '<p><strong>经度:</strong> ' + (this.exifdata.GPSLongitude ? formatCoordinate(this.exifdata.GPSLongitude) : '未知') + '</p>';
+                    exifHtml += '<p><strong>纬度:</strong> ' + (this.exifdata.GPSLatitude ? formatCoordinate(this.exifdata.GPSLatitude) : '未知') + '</p>';
 
                     exifInfo.innerHTML = exifHtml;
                 } else {
@@ -84,20 +81,37 @@
             });
         }
 
-        function loadImages(startIndex, count) {
+        function formatCoordinate(coordinate) {
+            if (coordinate && coordinate.length === 3) {
+                var degrees = coordinate[0] || 0;
+                var minutes = coordinate[1] || 0;
+                var seconds = coordinate[2] || 0;
+
+                var direction = coordinate[3] || '';
+                var formattedCoordinate = degrees + '° ' + minutes + '\' ' + seconds + '" ' + direction;
+
+                return formattedCoordinate;
+            }
+
+            return '';
+        }
+
+        function loadImages(startIndex, endIndex) {
             var gallery = document.querySelector('.gallery');
 
-            for (var i = startIndex; i < startIndex + count; i++) {
+            for (var i = startIndex; i < endIndex; i++) {
                 var imageSrc = imagesFolder + 'image' + i + '.jpg';
                 var imageContainer = document.createElement('div');
                 imageContainer.classList.add('image-container');
 
                 var image = new Image();
                 image.src = imageSrc;
+
+                image.onload = function() {
+                    loadImageExif(this, imageContainer);
+                };
+
                 imageContainer.appendChild(image);
-
-                loadImageExif(image, imageContainer);
-
                 gallery.appendChild(imageContainer);
                 loadedImages.push(imageContainer);
             }
