--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -69,11 +69,8 @@
                 if (this.exifdata) {
                     var exifHtml = '';
                     exifHtml += '<p><strong>拍摄时间:</strong> ' + (this.exifdata.DateTimeOriginal || '未知') + '</p>';
-                    exifHtml += '<p><strong>经度:</strong> ' + (this.exifdata.GPSLongitude ? formatCoordinate(this.exifdata.GPSLongitude) : '未知') + '</p>';
-                    exifHtml += '<p><strong>纬度:</strong> ' + (this.exifdata.GPSLatitude ? formatCoordinate(this.exifdata.GPSLatitude) : '未知') + '</p>';
-                    exifHtml += '<p><strong>设备:</strong> ' + (this.exifdata.Make || '未知') + ' ' + (this.exifdata.Model || '未知') + '</p>';
-                    exifHtml += '<p><strong>光圈:</strong> ' + (this.exifdata.FNumber ? 'f/' + this.exifdata.FNumber.toFixed(2) : '未知') + '</p>';
-                    exifHtml += '<p><strong>曝光时间:</strong> ' + (this.exifdata.ExposureTime ? this.exifdata.ExposureTime.toFixed(2) + 's' : '未知') + '</p>';
+                    exifHtml += '<p><strong>经度:</strong> ' + (this.exifdata.GPSLatitude ? formatCoordinate(this.exifdata.GPSLatitude) : '未知') + '</p>';
+                    exifHtml += '<p><strong>纬度:</strong> ' + (this.exifdata.GPSLongitude ? formatCoordinate(this.exifdata.GPSLongitude) : '未知') + '</p>';
                     exifInfo.innerHTML = exifHtml;
                 } else {
                     exifInfo.innerHTML = '<p>无可用的 EXIF 信息</p>';
@@ -95,7 +92,8 @@
                 image.src = imageSrc;
 
                 image.onload = function() {
-                    loadImageExif(this, imageContainer);
+                    var container = this.parentNode;
+                    loadImageExif(this, container);
                 };
 
                 imageContainer.appendChild(image);
@@ -149,5 +147,3 @@
     </script>
 </body>
 </html>
-
-
