--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -18,34 +18,33 @@
         .gallery {
             display: flex;
             flex-wrap: wrap;
-            justify-content: flex-start;
-            align-items: flex-start;
+            justify-content: center;
+            align-items: center;
             gap: 20px;
             margin-top: 30px;
         }
 
         .image-container {
-            flex: 0 0 calc(33.33% - 20px);
-            max-width: calc(33.33% - 20px);
             text-align: center;
         }
 
         .image-container img {
-            width: 100%;
+            max-width: 100%;
             height: auto;
             border-radius: 5px;
         }
 
-        .image-container .exif-info {
+        .exif-info {
             margin-top: 10px;
             padding: 5px;
             background-color: #fff;
             border-radius: 5px;
             font-size: 12px;
             line-height: 1.4;
+            text-align: center;
         }
 
-        .image-container .exif-info p {
+        .exif-info p {
             margin: 0;
             margin-bottom: 5px;
         }
@@ -60,6 +59,7 @@
         var imagesPerLoad = 20;
         var scrollThreshold = 200;
         var loadedImages = [];
+        var loadedCount = 0;
 
         function loadImageExif(image, element) {
             EXIF.getData(image, function() {
@@ -69,12 +69,12 @@
                 if (this.exifdata) {
                     var exifHtml = '';
                     exifHtml += '<p><strong>拍摄时间:</strong> ' + (this.exifdata.DateTimeOriginal || '未知') + '</p>';
-                    exifHtml += '<p><strong>经度:</strong> ' + (this.exifdata.GPSLatitude ? formatCoordinate(this.exifdata.GPSLatitude) : '未知') + '</p>';
-                    exifHtml += '<p><strong>纬度:</strong> ' + (this.exifdata.GPSLongitude ? formatCoordinate(this.exifdata.GPSLongitude) : '未知') + '</p>';
+                    exifHtml += '<p><strong>经度:</strong> ' + (this.exifdata.GPSLongitude ? formatCoordinate(this.exifdata.GPSLongitude) : '未知') + '</p>';
+                    exifHtml += '<p><strong>纬度:</strong> ' + (this.exifdata.GPSLatitude ? formatCoordinate(this.exifdata.GPSLatitude) : '未知') + '</p>';
                     exifHtml += '<p><strong>ISO:</strong> ' + (this.exifdata.ISO ? this.exifdata.ISO : '未知') + '</p>';
-                    exifHtml += '<p><strong>曝光时间:</strong> ' + (this.exifdata.ExposureTime ? this.exifdata.ExposureTime : '未知') + '</p>';
                     exifHtml += '<p><strong>光圈大小:</strong> ' + (this.exifdata.FNumber ? 'f/' + this.exifdata.FNumber : '未知') + '</p>';
-                    exifHtml += '<p><strong>拍摄设备:</strong> ' + (this.exifdata.Make || '未知') + ' ' + (this.exifdata.Model || '') + '</p>';
+                    exifHtml += '<p><strong>曝光时间:</strong> ' + (this.exifdata.ExposureTime ? this.exifdata.ExposureTime : '未知') + '</p>';
+                    exifHtml += '<p><strong>设备信息:</strong> ' + (this.exifdata.Make || '未知') + ' ' + (this.exifdata.Model || '') + '</p>';
                     exifInfo.innerHTML = exifHtml;
                 } else {
                     exifInfo.innerHTML = '<p>无可用的 EXIF 信息</p>';
@@ -84,15 +84,14 @@
             });
         }
 
-        function loadImages(startIndex, endIndex) {
-            for (var i = startIndex; i < endIndex; i++) {
-                var imageSrc = imagesFolder + 'image' + i + '.jpg';
-
+        function loadImages() {
+            for (var i = 0; i < imagesPerLoad; i++) {
                 var imageContainer = document.createElement('div');
                 imageContainer.classList.add('image-container');
 
                 var image = new Image();
-                image.src = imageSrc;
+                image.src = imagesFolder + 'image' + i + '.jpg';
+
                 image.onload = function() {
                     var container = this.parentNode;
                     container.appendChild(this);
@@ -100,13 +99,15 @@
                 };
 
                 imageContainer.appendChild(image);
-
                 loadedImages.push(imageContainer);
             }
+
+            loadedCount += imagesPerLoad;
         }
 
         function shuffleArray(array) {
-            var currentIndex = array.length, temporaryValue, randomIndex;
+            var currentIndex = array.length;
+            var temporaryValue, randomIndex;
 
             while (currentIndex !== 0) {
                 randomIndex = Math.floor(Math.random() * currentIndex);
@@ -120,22 +121,25 @@
             return array;
         }
 
+        function handleScroll() {
+            if (window.innerHeight + window.pageYOffset >= document.body.offsetHeight - scrollThreshold) {
+                var remainingImages = loadedImages.slice(loadedCount);
+                loadedImages = loadedImages.slice(0, loadedCount);
+
+                shuffleArray(remainingImages);
+
+                remainingImages.forEach(function(imageContainer) {
+                    var gallery = document.querySelector('.gallery');
+                    gallery.appendChild(imageContainer);
+                });
+
+                loadedCount += remainingImages.length;
+            }
+        }
+
         document.addEventListener('DOMContentLoaded', function() {
-            loadImages(0, imagesPerLoad);
-
-            window.addEventListener('scroll', function() {
-                if (window.innerHeight + window.pageYOffset >= document.body.offsetHeight - scrollThreshold) {
-                    var remainingImages = loadedImages.slice(imagesPerLoad);
-                    loadedImages = loadedImages.slice(0, imagesPerLoad);
-
-                    shuffleArray(remainingImages);
-
-                    remainingImages.forEach(function(imageContainer) {
-                        var gallery = document.querySelector('.gallery');
-                        gallery.appendChild(imageContainer);
-                    });
-                }
-            });
+            loadImages();
+            window.addEventListener('scroll', handleScroll);
         });
 
         function formatCoordinate(coordinate) {
