--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -6,12 +6,24 @@
   <style>
     /* 居中显示图片和exif信息 */
     .photo-container {
-      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+    
+    /* 图片样式 */
+    .photo-container img {
+      max-width: 100%;
+      height: auto;
     }
     
     /* exif信息样式 */
     .exif-info {
       margin-top: 10px;
+      font-size: 14px;
+      text-align: center;
+      color: #999;
     }
   </style>
 </head>
@@ -49,8 +61,8 @@
       // 获取图片展示区域
       var gallery = document.getElementById('gallery');
 
-      // 清空图片展示区域
-      gallery.innerHTML = '';
+      // 创建文档片段，用于一次性添加多个元素
+      var fragment = document.createDocumentFragment();
 
       // 显示当前批次的图片
       for (var i = currentIndex; i < currentIndex + batchSize; i++) {
@@ -77,9 +89,12 @@
         photoContainer.appendChild(img);
         photoContainer.appendChild(exifInfo);
 
-        // 将容器添加到展示区域
-        gallery.appendChild(photoContainer);
+        // 将容器添加到文档片段
+        fragment.appendChild(photoContainer);
       }
+
+      // 将文档片段一次性添加到展示区域
+      gallery.appendChild(fragment);
 
       // 更新当前显示的图片索引
       currentIndex += batchSize;
@@ -97,4 +112,3 @@
   </script>
 </body>
 </html>
-
